--- a/helm/invincible-app/templates/ingress.yaml
+++ b/helm/invincible-app/templates/ingress.yaml
@@ -5,8 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "invincible.do.jjk3.com"
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
