--- a/helm/invincible-app/templates/service.yaml
+++ b/helm/invincible-app/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "invincible-app.fullname" . }}
+  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     app: {{ include "invincible-app.fullname" . }}
