--- a/helm/invincible-app/templates/deployment.yaml
+++ b/helm/invincible-app/templates/deployment.yaml
@@ -27,6 +27,12 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 3
           env:
           - name: REGION_LOCAL
             value: {{ ternary .Values.primaryRegion .Values.secondaryRegion .Values.primary }}
